force-app/main/default/objects/NBA_Queue__c/NBA_Queue__c.object-meta.xml
<CustomObject>
    <label>NBA Queue</label>
    <nameField>
        <displayFormat>NBA-{00000}</displayFormat>
        <label>NBA Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NBA Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>