force-app/main/default/objects/NBA_Queue__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NBA Queue</relationshipLabel>
    <relationshipName>NBA_Queue</relationshipName>
    <type>Lookup</type>
</CustomField>