force-app/main/default/objects/NBA_Queue__c/fields/Action_Context__c.field-meta.xml
<CustomField>
    <fullName>Action_Context__c</fullName>
    <label>Action Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>