force-app/main/default/objects/NBA_Queue__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Follow_Up</fullName>
                <label>Follow Up</label>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Payroll Opportunity Call</fullName>
            </value>
            <value>
                <fullName>Payroll Prospecting Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>