force-app/main/default/objects/NBA_Queue__c/fields/Actioned_Date__c.field-meta.xml
<CustomField>
    <fullName>Actioned_Date__c</fullName>
    <label>Actioned Date</label>
    <type>DateTime</type>
</CustomField> 