force-app/main/default/objects/NBA_Queue__c/fields/Best_Person_to_Call__c.field-meta.xml
<CustomField>
    <fullName>Best_Person_to_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Best Person to Call</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NBA Queues</relationshipLabel>
    <relationshipName>NBA_Queues</relationshipName>
    <type>Lookup</type>
</CustomField> 