force-app/main/default/objects/NBA_Queue__c/fields/Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Call_Disposition__c</fullName>
    <description>Call disposition selected when accepting a call action</description>
    <label>Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connected - DM</fullName>
            </value>
            <value>
                <fullName>Connected - GK</fullName>
            </value>
            <value>
                <fullName>Attempted - Left Voicemail</fullName>
            </value>
            <value>
                <fullName>Attempted - No Voicemail</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 