force-app/main/default/objects/NBA_Queue__c/fields/Call_Script__c.field-meta.xml
<CustomField>
    <fullName>Call_Script__c</fullName>
    <label>Call Script</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>