force-app/main/default/objects/NBA_Queue__c/fields/Company_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Company_Age_Days__c</fullName>
    <label>Company Age (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>