force-app/main/default/objects/NBA_Queue__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Date and time when the NBA Queue item was completed (status changed to Accepted)</description>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField> 