force-app/main/default/objects/NBA_Queue__c/fields/Dismissal_Category__c.field-meta.xml
<CustomField>
    <fullName>Dismissal_Category__c</fullName>
    <label>Dismissal Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Scheduled</fullName>
            </value>
            <value>
                <fullName>Time Zone</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>