force-app/main/default/objects/NBA_Queue__c/fields/Email_Message__c.field-meta.xml
<CustomField>
    <fullName>Email_Message__c</fullName>
    <label>Email Message</label>
    <type>Lookup</type>
    <referenceTo>EmailMessage</referenceTo>
    <relationshipLabel>NBA Queue Items</relationshipLabel>
    <relationshipName>NBA_Queue_Items</relationshipName>
</CustomField>