force-app/main/default/objects/NBA_Queue__c/fields/Email_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Message_Id__c</fullName>
    <label>Email Message ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>