force-app/main/default/objects/NBA_Queue__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <type>Lookup</type>
    <referenceTo>Event</referenceTo>
    <relationshipLabel>NBA Queue Items</relationshipLabel>
    <relationshipName>NBA_Queue_Items</relationshipName>
</CustomField>