force-app/main/default/objects/NBA_Queue__c/fields/Event_Activity__c.field-meta.xml
<CustomField>
    <fullName>Event_Activity__c</fullName>
    <label>Event Activity</label>
    <type>Lookup</type>
    <referenceTo>Activity</referenceTo>
    <relationshipName>NBA_Queue_Events</relationshipName>
    <type>Lookup</type>
</CustomField>