force-app/main/default/objects/NBA_Queue__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <label>Event ID</label>
    <type>Text</type>
    <length>18</length>
    <fieldPermissions>
        <editable>true</editable>
        <readable>true</readable>
    </fieldPermissions>
</CustomField>