force-app/main/default/objects/NBA_Queue__c/fields/First_Viewed_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Viewed_Date__c</fullName>
    <label>First Viewed Date</label>
    <type>DateTime</type>
</CustomField> 