force-app/main/default/objects/NBA_Queue__c/fields/Hiring_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hiring Engaged</label>
    <type>Checkbox</type>
</CustomField> 