force-app/main/default/objects/NBA_Queue__c/fields/Inception_Switcher__c.field-meta.xml
<CustomField>
    <fullName>Inception_Switcher__c</fullName>
    <label>Inception/Switcher</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inception</fullName>
            </value>
            <value>
                <fullName>Switcher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>