force-app/main/default/objects/NBA_Queue__c/fields/Last_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Date__c</fullName>
    <label>Last Call Date</label>
    <type>DateTime</type>
</CustomField>