force-app/main/default/objects/NBA_Queue__c/fields/Last_Viewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Viewed_Date__c</fullName>
    <description>Timestamp when this NBA Queue item was last served to a user for viewing</description>
    <label>Last Viewed Date</label>
    <type>DateTime</type>
</CustomField> 