force-app/main/default/objects/NBA_Queue__c/fields/Manager_Log_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Manager_Log_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Log Engaged</label>
    <type>Checkbox</type>
</CustomField> 