force-app/main/default/objects/NBA_Queue__c/fields/Messaging_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Messaging Engaged</label>
    <type>Checkbox</type>
</CustomField> 