force-app/main/default/objects/NBA_Queue__c/fields/Mobile_Time_Tracking_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Time_Tracking_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Time Tracking Engaged</label>
    <type>Checkbox</type>
</CustomField> 