force-app/main/default/objects/NBA_Queue__c/fields/Model_Reason__c.field-meta.xml
<CustomField>
    <fullName>Model_Reason__c</fullName>
    <label>Model Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>