force-app/main/default/objects/NBA_Queue__c/fields/Most_Recent_Payroll_Provider__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Payroll_Provider__c</fullName>
    <label>Most Recent Payroll Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 