force-app/main/default/objects/NBA_Queue__c/fields/Oam_Activity__c.field-meta.xml
<CustomField>
    <fullName>Oam_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OAM Activity</label>
    <type>Checkbox</type>
</CustomField> 