force-app/main/default/objects/NBA_Queue__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>NBA Queue Opportunity</relationshipLabel>
    <relationshipName>NBA_Queue_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField> 