force-app/main/default/objects/NBA_Queue__c/fields/Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source__c</fullName>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Inbound Calendly</fullName>
            </value>
            <value>
                <fullName>CS Pass</fullName>
            </value>
            <value>
                <fullName>Success Pass</fullName>
            </value>
            <value>
                <fullName>SS - Re-Entry</fullName>
            </value>
            <value>
                <fullName>SS - M1-2 11-19</fullName>
            </value>
            <value>
                <fullName>SS - M3+ 1-10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>