force-app/main/default/objects/NBA_Queue__c/fields/Overtime_Preferences_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Preferences_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overtime Preferences Engaged</label>
    <type>Checkbox</type>
</CustomField> 