force-app/main/default/objects/NBA_Queue__c/fields/Rep_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rep_Notes__c</fullName>
    <label>Rep Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>