force-app/main/default/objects/NBA_Queue__c/fields/Scheduling_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduling Engaged</label>
    <type>Checkbox</type>
</CustomField> 