force-app/main/default/objects/NBA_Queue__c/fields/Shift_Notes_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Shift_Notes_Engaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shift Notes Engaged</label>
    <type>Checkbox</type>
</CustomField> 