force-app/main/default/objects/NBA_Queue__c/fields/Snoozed_Until__c.field-meta.xml
<CustomField>
    <fullName>Snoozed_Until__c</fullName>
    <label>Snoozed Until</label>
    <type>DateTime</type>
</CustomField>