force-app/main/default/objects/NBA_Queue__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
    <description>Start time of the event that triggered this NBA Queue item. Used for priority override when within 7 minutes.</description>
    <fieldPermissions>
        <editable>true</editable>
        <readable>true</readable>
    </fieldPermissions>
</CustomField>