force-app/main/default/objects/NBA_Queue__c/fields/Talkdesk_Activity__c.field-meta.xml
<CustomField>
    <fullName>Talkdesk_Activity__c</fullName>
    <label>Talkdesk Activity</label>
    <referenceTo>talkdesk__Talkdesk_Activity__c</referenceTo>
    <relationshipLabel>NBA Queue</relationshipLabel>
    <relationshipName>NBA_Queue</relationshipName>
    <type>Lookup</type>
</CustomField>